--- a/index.html
+++ b/index.html
@@ -83,10 +83,11 @@ map.addControl(selectFeature);
             }
         </script>
     </head>
-    <body onload="init()">
+    <body onload="">
         <h1 id="title">Daniel V Alhadeff, portfolio and CV</h1>
 		
         <div id="toc">
+        	<script src="https://embed.github.com/view/geojson/dvalhadeff/DVA-Portfolio/gh-pages/DVAPortfolio.geojson"></script>
 		<object type="image/svg+xml" data='PortfolioMap.svg' style='width: 100%; height: 100%;'>
 			<param name="src" value="PortfolioMap.svg" />
 		</object>
